--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Express server for Hraviratoms",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "node server.js"
+    "server": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
