--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Express server for Hraviratoms",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
