--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,6 @@
     "nodemon": "^3.1.4"
   },
   "scripts": {
-    "start": "nodemon ./api/index.js",
-    "client": "cd hraviratoms && npm start",
-    "build": "cd hraviratoms && npm run build"
+    "start": "nodemon ./api/index.js"
   }
 }
